# prufercoder

./: CMakeLists.txt  README.md
prufercoder/data/: rings.txt  zinc15.txt
prufercoder/prufercoder/: atomCode.h  main.cpp  pruffer.cpp  pruffer.h  test.h
prufercoder/prufercoder.xcodeproj/: project.pbxproj
prufercoder/prufercoder.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
prufercoder/prufercoder.xcodeproj/project.xcworkspace/xcuserdata/YuryKravchenko.xcuserdatad/: UserInterfaceState.xcuserstate
prufercoder/prufercoder.xcodeproj/xcuserdata/YuryKravchenko.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
prufercoder/prufercoder.xcodeproj/xcuserdata/YuryKravchenko.xcuserdatad/xcschemes/: prufercoder.xcscheme  xcschememanagement.plist
python pruffercoder/: CMakeLists.txt
python pruffercoder/atomCode/: CMakeLists.txt  atomCode.cpp
python pruffercoder/main/: CMakeLists.txt  main.cpp
python pruffercoder/pruffer/: CMakeLists.txt
trainer/: classifier.py  gan.py  goodExample  learn.py  query.py  res.py  test.py
